--- a/src/main/resources/properties/configuration.properties
+++ b/src/main/resources/properties/configuration.properties
@@ -1,3 +1,3 @@
-configuration.profiles=
-configuration.suites=
-configuration.environments=
+configuration.profiles=web/headless/chrome
+configuration.suites=web_app
+configuration.environments=/
